# rgx

./: .gitignore  Cargo.toml  README.md
.claude/: settings.json
.claude/hooks/: branch-protection.sh  pre-pr-version.sh
scripts/git-hooks/: post-merge  pre-commit  pre-push
src/: claude.rs  error.rs  lib.rs  main.rs  output.rs
src/commands/: explain.rs  generate.rs  mod.rs  test.rs
