[package]
name = "rgx"
version = "0.1.2"
edition = "2021"
description = "Natural language regex patterns powered by Claude"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
crossterm = "0.28"
regex = "1.11"

[profile.release]
lto = true
strip = true
